@@ -14,7 +14,11 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import com.google.gson.JsonParser;
+import com.google.gson.JsonSyntaxException;
 import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -25,6 +29,7 @@ import com.google.gson.Gson;
 
 @Component
 public class JiraFieldMappingValidator {
+    private Logger logger = LoggerFactory.getLogger(getClass());
     private final Gson gson;
 
     @Autowired
@@ -36,27 +41,56 @@ public class JiraFieldMappingValidator {
         List<JiraJobCustomFieldModel> customFields = fieldMappingField.getValues()
             .stream()
             .map(fieldMappingString -> gson.fromJson(fieldMappingString, JiraJobCustomFieldModel.class))
-            .collect(Collectors.toList());
+                .toList();
 
         Set<String> fieldNames = new HashSet<>();
         List<String> duplicateNameList = new ArrayList<>();
+        List<String> invalidJsonFieldNames = new ArrayList<>();
 
         for (JiraJobCustomFieldModel jiraJobCustomFieldModel : customFields) {
             String currentFieldName = jiraJobCustomFieldModel.getFieldName();
             if (fieldNames.contains(currentFieldName)) {
                 duplicateNameList.add(currentFieldName);
             }
+
+            if(jiraJobCustomFieldModel.isTreatValueAsJson()) {
+                validateJson(jiraJobCustomFieldModel).ifPresent(invalidJsonFieldNames::add);
+            }
+
             fieldNames.add(currentFieldName);
         }
-
+        String errorMessage = null;
         if (!duplicateNameList.isEmpty()) {
             String duplicateNames = StringUtils.join(duplicateNameList, ", ");
-            String errorMessage = String.format("Duplicate field name(s): %s", duplicateNames);
+            errorMessage = String.format("Duplicate field name(s): %s", duplicateNames);
+        }
+
+        if(!invalidJsonFieldNames.isEmpty()) {
+            String jsonErrorFieldNames = StringUtils.join(invalidJsonFieldNames, ", ");
+            if(StringUtils.isNotBlank(errorMessage)) {
+                errorMessage = String.format("and invalid JSON value field name(s): %s", jsonErrorFieldNames);
+            } else {
+                errorMessage = String.format("Invalid JSON value field name(s): %s", jsonErrorFieldNames);
+            }
+        }
+
+        if(StringUtils.isNotBlank(errorMessage)) {
+            logger.error("Custom Field Validation error: {}", errorMessage);
             AlertFieldStatus fieldMappingError = AlertFieldStatus.error(fieldMappingFieldKey, errorMessage);
             return Optional.of(fieldMappingError);
         }
 
         return Optional.empty();
+    }
+
+    private Optional<String> validateJson(JiraJobCustomFieldModel jiraJobCustomFieldModel) {
+        try{
+            String value = jiraJobCustomFieldModel.getFieldValue();
+            JsonParser.parseString(value);
+            return Optional.empty();
+        } catch(JsonSyntaxException ex) {
+            return Optional.of(jiraJobCustomFieldModel.getFieldName());
+        }
     }
 
 }
