@@ -8,7 +8,6 @@
 package com.blackduck.integration.alert.channel.jira.server.distribution;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.blackduck.integration.alert.api.channel.jira.distribution.search.JiraSearcherResponseModel;
 import com.blackduck.integration.alert.api.channel.jira.distribution.search.JqlQueryExecutor;
@@ -31,12 +30,29 @@ public class JiraServerQueryExecutor implements JqlQueryExecutor {
         return issueSearchResponseModel.getIssues()
                    .stream()
                    .map(this::convertModel)
-                   .collect(Collectors.toList());
+                   .toList();
+    }
+
+    @Override
+    public List<JiraSearcherResponseModel> executeQuery(String jql, Integer maxResults) throws AlertException {
+        IssueSearchResponseModel issueSearchResponseModel = queryForIssues(jql, maxResults);
+        return issueSearchResponseModel.getIssues()
+                .stream()
+                .map(this::convertModel)
+                .toList();
     }
 
     private IssueSearchResponseModel queryForIssues(String jql) throws AlertException {
         try {
             return issueSearchService.queryForIssues(jql);
+        } catch (IntegrationException e) {
+            throw new AlertException("Failed to query for Jira Server issues", e);
+        }
+    }
+
+    private IssueSearchResponseModel queryForIssues(String jql, Integer maxResults) throws AlertException {
+        try {
+            return issueSearchService.queryForIssuePage(jql, 0, maxResults);
         } catch (IntegrationException e) {
             throw new AlertException("Failed to query for Jira Server issues", e);
         }
